SPDI-56091 Backport HBASE-26477 Fix MiniMapReduceCluster failure under Java17